Make the model more generic
to prevent having to implement a full model for each format